--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -34,3 +34,9 @@
 .ui-icon
     &:nth-child(4)
         display: none !important
+
+.elfinder-quicklook-titlebar-icon 
+    .ui-icon
+        &.ui-icon-closethick
+            left: 20px;
+            top: 8px;
