--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -40,3 +40,20 @@
         &.ui-icon-closethick
             left: 20px;
             top: 8px;
+
+.ui-helper-clearfix
+    &.ui-dialog-buttonpane
+        &.ui-widget-content
+            font-size: 12px;
+            .ui-dialog-buttonset 
+                &.elfinder-edit-extras
+                    .ui-corner-all
+                        margin-top: 0px;
+    .ui-button-icon-only
+        min-width: 125px;
+        .ui-button-icon
+            &.ui-icon
+                &.ui-icon-gear
+                    left: 12px;
+    .ui-corner-all
+        margin-top: 0px;
