Code editor full screen issue fixed.

--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -57,3 +57,17 @@
                     left: 12px;
     .ui-corner-all
         margin-top: 0px;
+
+#ace_settingsmenu
+    top: 32px;
+
+
+// Code editor full screen issue fixed.
+.elfinder-maximized
+    top: 32px !important;
+    left: 30px !important;
+    width: 96% !important;
+    .ui-dialog-content 
+        &.ui-widget-content 
+            &.elfinder-edit-editor
+                height: 81% !important;
