WIP: permission system

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -105,16 +105,16 @@ input[type=radio]
     ul
         li
             display: inline-block
-            margin-left: 10px
+            margin-left: 10px;
 
-@import "parts/settings"
-@import "parts/themepack"
-@import "parts/permission-system"
-@import "parts/component"
-@import "parts/donation"
-@import "parts/elfinder"
-@import "parts/permission-system-demo"
-@import "parts/review"
+@import "parts/settings";
+@import "parts/themepack";
+@import "parts/permission-system";
+@import "parts/component";
+@import "parts/donation";
+@import "parts/elfinder";
+@import "parts/permission-system-demo";
+@import "parts/review";
 
 @media (max-width: 480px)
 
