--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -6,6 +6,7 @@
         background-color: #f0f0f0
         padding: 10px
         text-align: left
+    z-index: 10000
 
 .ui-dialog
     &:nth-child(7)
@@ -61,6 +62,9 @@
 #ace_settingsmenu
     top: 32px;
 
+
+.elfinder-button-search-menu 
+    top: 32px!important
 
 // Code editor full screen issue fixed.
 .elfinder-maximized
