--- a/sass/parts/permission-system.sass
+++ b/sass/parts/permission-system.sass
@@ -48,3 +48,46 @@
         text-decoration: none
         color: white
         font-size: 1.1em
+
+.fmp_permission_wrapper 
+    th>td 
+	        padding: 5px;
+
+
+.fmp_permission_wrapper 
+    h3
+	    font-size: 120%;
+	    color: cyan;
+
+.fmp_permission_wrapper input[type="checkbox"]
+
+.col-main-permission-system
+	width: inherit;
+
+
+.col-main-permission-system 
+    > .gb-fm-row
+	    padding: 20px;
+
+.fmp-save
+	padding: 10px 20px 10px 20px;
+	color: white;
+	font-size: 120%;
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	background: rgb(28, 184, 65);
+	cursor: pointer
+
+
+.fmp-update-notification
+	width: 95%;
+	margin-left: 5px;
+	background-color: white;
+	margin-top: 10px;
+	padding: 10px;
+	border-left: 5px solid red;
+	background-color: #F4DADA;
+
+#public-folder-wrapper
+	margin: 10px;
+	padding: 10px;
