Feat: theme menu added in  settings page

--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -36,11 +36,11 @@
     &:nth-child(4)
         display: none !important
 
-.elfinder-quicklook-titlebar-icon 
-    .ui-icon
-        &.ui-icon-closethick
-            left: 20px;
-            top: 8px;
+// .elfinder-quicklook-titlebar-icon 
+//     .ui-icon
+//         &.ui-icon-closethick
+//             left: 20px;
+//             top: 8px;
 
 .ui-helper-clearfix
     &.ui-dialog-buttonpane
