--- a/sass/parts/review.sass
+++ b/sass/parts/review.sass
@@ -1,6 +1,7 @@
 .review-block
     padding-top: 24px
     padding-bottom: 24px
+    margin-bottom: 24px
     text-align: center
     font-size: 1.2em
     border: 1px dashed #0d5ed9
@@ -10,18 +11,18 @@
         margin-top: 8px
         // margin-right: 16px
     .actions
-        margin-top: 24px
         a
             padding: 5px 10px 5px 10px
             text-decoration: none
             border: 1px solid #0d5ed9
         .btn
-            border-radius: 5px
+            border-radius: 25px
+            margin-left: 10px
         .btn-review
             background-color: #0d5ed9
             color: white
             font-weight: 700
-            border-radius: 5px
+            border-radius: 25px
             transition-duration: 0.6s
             &:hover
                 transition-duration: 0.6s
