wip: client config option

--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -75,3 +75,8 @@
         &.ui-widget-content 
             &.elfinder-edit-editor
                 height: 81% !important;
+
+.elfinder-dialog-error, .elfinder-dialog-confirm 
+    .ui-dialog-content
+        padding-left: 56px;
+        min-height: 35px;
