--- a/sass/parts/review.sass
+++ b/sass/parts/review.sass
@@ -6,6 +6,7 @@
     font-size: 1.2em
     border: 1px dashed #0d5ed9
     border-radius: 10px
+    flex: 1
     .message
         margin: 16px
         margin-top: 8px
@@ -34,3 +35,8 @@
             font-weight: 400
             border: 0px
             font-size: 1em
+
+.fm-promo-feedback
+    display: flex
+    width: 100%
+    justify-content: flex-end
