--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,7 @@ input[type=radio]
 
 .fm-header
     // box-shadow: 0px 1px 0px
-    padding-left: 25px
+    padding: 15px
     width: 94%
     >h1
         color: #0073AA
@@ -21,7 +21,7 @@ input[type=radio]
             margin: 5px
             padding: 5px
     .fm-logo
-        width: 50px
+        width: auto
         height: auto
         position: relative
         top: 15px
@@ -56,7 +56,7 @@ input[type=radio]
     // margin-top: 20px
     // height: 73vh
     .col-main
-        width: 69%
+        width: 100%
         min-height: 200px
         // height: 70vh
         float: left
