--- a/frontend/src/resource/styles/wp-css-reset.css
+++ b/frontend/src/resource/styles/wp-css-reset.css
@@ -28,6 +28,7 @@
   position: sticky;
   overflow: hidden;
   /* height: calc(100vh - 32px); */
+  min-height: calc(100vh - 32px);
   top: 32px;
   padding-bottom: 0;
 }
