WIP: Top Navigation

--- a/frontend/src/pages/Layout/ui/Navigation/TopNavigation/TopNavigation.module.css
+++ b/frontend/src/pages/Layout/ui/Navigation/TopNavigation/TopNavigation.module.css
@@ -4,3 +4,9 @@
   height: 42px;
   min-height: 42px;
 }
+
+.reviewUs {
+  border: 2px solid !important;
+  color:rgba(255, 149, 41, 100%) !important;
+  padding: 8px 16px; /* Adjust padding as needed */
+}
