--- a/frontend/src/components/utilities/TelemetryPopup/TelemetryPopup.module.css
+++ b/frontend/src/components/utilities/TelemetryPopup/TelemetryPopup.module.css
@@ -11,6 +11,14 @@
   text-align: center;
 }
 
+.fixedTitle {
+  background-color: #087d08;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 .skipBtn {
   border: none;
   box-shadow: none;
@@ -21,11 +29,19 @@
   color: #776d6d;
 }
 
+.skipBtn span:hover {
+  color: #534e4e;
+}
+
 .okBtn span {
   color: white;
 }
 
-.improvements {
+.bitSocialReleaseBanner a:focus{
+  box-shadow: none;
+}
+
+.improvements, .fixed {
   display: flex;
   flex-direction: column;
   margin: 8px;
@@ -35,3 +51,32 @@
 .improvements span {
   color: #000;
 }
+
+.telemetryContent span{
+  color:#000;
+}
+
+.telemetryContent h3{
+  margin-bottom: 0;
+}
+
+.telemetryContent button{
+   margin-top: 10px;
+   border: none;
+    background: none;
+    color: black;
+    padding: 0;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.telemetryContent a:hover{
+  color: #1577ff;
+}
+
+.telemetryContent a:focus{
+  box-shadow: none;
+}
+
+
+
