chore: packages version updated

--- a/frontend/src/resource/styles/plugin.css
+++ b/frontend/src/resource/styles/plugin.css
@@ -95,8 +95,8 @@
 }
 
 .ui-helper-clearfix.ui-dialog-buttonpane.ui-widget-content
-.ui-dialog-buttonset.elfinder-edit-extras
-.ui-corner-all {
+  .ui-dialog-buttonset.elfinder-edit-extras
+  .ui-corner-all {
   margin-top: 0;
 }
 
@@ -130,127 +130,124 @@
   }
 }
 
-
 /* --Telemetry-Popup-ant-modal-custom-css-- */
 
-.telemetry-popup .ant-modal-content{
-  background-color: white!important;
+.telemetry-popup .ant-modal-content {
+  background-color: white !important;
 }
 
-.telemetry-popup .ant-modal-header{
-  background: white!important;
+.telemetry-popup .ant-modal-header {
+  background: white !important;
 }
 
-.telemetry-popup .ant-modal-title{
-  color: #000!important;
+.telemetry-popup .ant-modal-title {
+  color: #000 !important;
 }
 
-.telemetry-popup .ant-modal-body p{
+.telemetry-popup .ant-modal-body p {
   color: #000;
 }
 
-
-.telemetry-popup .ant-btn-primary{
+.telemetry-popup .ant-btn-primary {
   background: #1677ff;
   box-shadow: none;
 }
 
-.telemetry-popup .ant-btn-primary:hover{
-  background: #4096ff!important;
+.telemetry-popup .ant-btn-primary:hover {
+  background: #4096ff !important;
 }
 
-.telemetry-popup .ant-btn-default{
-  background: none!important;
+.telemetry-popup .ant-btn-default {
+  background: none !important;
   border: none;
   padding: 0;
 }
 
-.telemetry-popup .ant-btn-default:hover{
+.telemetry-popup .ant-btn-default:hover {
   background: none;
   transition: none;
 }
 
-.telemetry-popup  .ant-steps-item-process .ant-steps-item-icon{
-  background-color: #1677ff!important;
-  border-color: #1677ff!important;
+.telemetry-popup .ant-steps-item-process .ant-steps-item-icon {
+  background-color: #1677ff !important;
+  border-color: #1677ff !important;
 }
 
-.telemetry-popup  .ant-steps-item-wait .ant-steps-item-icon{
-  background-color: #F0F0F0!important;
-  border-color: transparent!important;
-
+.telemetry-popup .ant-steps-item-wait .ant-steps-item-icon {
+  background-color: #f0f0f0 !important;
+  border-color: transparent !important;
 }
 
-.telemetry-popup  .ant-steps-item-wait .ant-steps-item-icon span{
-  color: rgba(0, 0, 0, 0.65)!important;
+.telemetry-popup .ant-steps-item-wait .ant-steps-item-icon span {
+  color: rgba(0, 0, 0, 0.65) !important;
 }
 
-
-.telemetry-popup .ant-steps-item-finish .ant-steps-item-icon{
-  background-color: #e6f4ff!important;
-  border-color: #e6f4ff!important;
+.telemetry-popup .ant-steps-item-finish .ant-steps-item-icon {
+  background-color: #e6f4ff !important;
+  border-color: #e6f4ff !important;
 }
 
-.telemetry-popup .ant-checkbox-inner{
-  background-color: #fff!important;
-  border-color: #d9d9d9!important;
+.telemetry-popup .ant-checkbox-inner {
+  background-color: #fff !important;
+  border-color: #d9d9d9 !important;
 }
 
 /* .telemetry-popup .ant-checkbox-wrapper span{ 
   color: rgba(0, 0, 0, 0.88)!important;
 } */
 
-.telemetry-popup .ant-checkbox-checked .ant-checkbox-inner{
-  background-color: #4096ff!important;
+.telemetry-popup .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #4096ff !important;
 }
 
-.telemetry-popconfirm .ant-popover-content .ant-popover-inner{
+.telemetry-popconfirm .ant-popover-content .ant-popover-inner {
   width: 450px;
-  background-color: #fff!important;
+  background-color: #fff !important;
 }
 
-.telemetry-popconfirm .ant-popconfirm-title, .ant-popconfirm-description{
-  color: #000!important;
+.telemetry-popconfirm .ant-popconfirm-title,
+.ant-popconfirm-description {
+  color: #000 !important;
 }
 
-.telemetry-popconfirm .ant-popconfirm-buttons{
+.telemetry-popconfirm .ant-popconfirm-buttons {
   display: flex;
   justify-content: space-between;
   margin-top: 15px;
   flex-flow: row-reverse;
 }
 
-.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-default{
+.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-default {
   background: #1677ff;
   box-shadow: none;
-  border-color: transparent!important;
+  border-color: transparent !important;
 }
 
-.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-default:hover{
-  background: #4096ff!important;
-  color:#fff!important;
+.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-default:hover {
+  background: #4096ff !important;
+  color: #fff !important;
   border-color: none;
 }
 
-.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-primary{
+.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-primary {
   background: none;
   border: none;
   box-shadow: none;
-  color:#776d6d;
+  color: #776d6d;
 }
 
-.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-primary:hover{
-  background: none!important;
-  color:#534e4e!important;
+.telemetry-popconfirm .ant-popconfirm-buttons .ant-btn-primary:hover {
+  background: none !important;
+  color: #534e4e !important;
 }
 
 /* --Telemetry-Popup-ant-modal-custom-css-- */
 
 /*--ant-header--*/
 
-.ant-layout-header{
-  line-height: 10px!important;
-  padding-top: 20px!important;
+.ant-layout-header {
+  line-height: 10px !important;
+  padding-top: 20px !important;
 }
 
 /*--ant-header--*/
@@ -267,7 +264,7 @@
   text-align: center;
 }
 
-.bit-social-release-modal .ant-modal-close-x{
+.bit-social-release-modal .ant-modal-close-x {
   color: black;
 }
 
