--- a/frontend/src/components/utilities/TelemetryPopup/TelemetryPopup.module.css
+++ b/frontend/src/components/utilities/TelemetryPopup/TelemetryPopup.module.css
@@ -1,11 +1,11 @@
 /* stylelint-disable no-descending-specificity */
-.popupContent{
+.popupContent {
   margin-block: 20px;
 }
 
-.popupContent ul{
+.popupContent ul {
   list-style-type: disc;
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 .improvementsTitle {
@@ -42,11 +42,12 @@
   color: white;
 }
 
-.bitSocialReleaseBanner a:focus{
+.bitSocialReleaseBanner a:focus {
   box-shadow: none;
 }
 
-.improvements, .fixed {
+.improvements,
+.fixed {
   display: flex;
   flex-direction: column;
   margin: 8px;
@@ -57,33 +58,33 @@
   color: #000;
 }
 
-.telemetryContent span{
-  color:#000;
+.telemetryContent span {
+  color: #000;
 }
 
-.telemetryContent h3{
+.telemetryContent h3 {
   margin-bottom: 0;
 }
 
-.telemetryContent button{
-   margin-top: 10px;
-   border: none;
-    background: none;
-    color: black;
-    padding: 0;
-    cursor: pointer;
-    text-decoration: underline;
+.telemetryContent button {
+  margin-top: 10px;
+  border: none;
+  background: none;
+  color: black;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
-.telemetryContent a:hover{
+.telemetryContent a:hover {
   color: #1577ff;
 }
 
-.telemetryContent a:focus{
+.telemetryContent a:focus {
   box-shadow: none;
 }
 
-.bitSocialReleaseBanner img{
+.bitSocialReleaseBanner img {
   height: 400px;
 }
 
@@ -106,13 +107,10 @@
 }
 
 .footerBtn a:hover {
-  background-color: #500cce!important;
+  background-color: #500cce !important;
   color: white;
 }
 
 .footerBtn a:focus {
   box-shadow: none;
 }
-
-
-
